composer dark mode bug

--- a/app/internal_packages/ui-dark/styles/override-email.less
+++ b/app/internal_packages/ui-dark/styles/override-email.less
@@ -23,6 +23,18 @@
     background-color: @gray-light;
   }
 }
+
+.RichEditor-toolbar .color-picker:hover,
+.RichEditor-toolbar button:hover {
+  background: @gray;
+  color: @gray-light;
+  select:hover {
+    color: @gray-light;
+  }
+  img.content-mask {
+    background-color: @gray-light;
+  }
+}
 .sift-list .details .subject,
 .outbox-list .details .subject,
 .thread-list .details .subject,
